--- a/src/assets/_CSS/login.css
+++ b/src/assets/_CSS/login.css
@@ -14,6 +14,14 @@
     background-color: #3498DB;
     width: 50%;
     height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#logo-display img{
+    width: 40vw;
+    height: 60vh;
 }
 .main-content{
     width: 50%;
